[package]
name    = "esp-alloc"
version = "0.1.0"
authors = [
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
    "Jesse Braham <jesse@beta7.io>",
]
edition     = "2021"
description = "A heap allocator for Espressif devices"
repository  = "https://github.com/esp-rs/esp-alloc"
license     = "MIT OR Apache-2.0"

keywords = [
    "allocator",
    "esp32",
    "riscv",
    "xtensa",
]
categories = [
    "memory-management",
    "no-std",
]

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"

[dependencies]
bare-metal = "1.0.0"

[target.'cfg(target_arch = "riscv32")'.dependencies]
linked_list_allocator = { version = "0.10.1", default-features = false, features = ["const_mut_refs"] }
riscv                 = "0.8.0"

[target.xtensa-esp32-none-elf.dependencies]
linked_list_allocator = "0.10.1"
xtensa-lx             = { version = "0.7.0",  features = ["esp32"] }

[target.xtensa-esp32s2-none-elf.dependencies]
linked_list_allocator = { version = "0.10.1", default-features = false, features = ["const_mut_refs"] }
xtensa-lx             = { version = "0.7.0",  features = ["esp32s2"] }

[target.xtensa-esp32s3-none-elf.dependencies]
linked_list_allocator = "0.10.1"
xtensa-lx             = { version = "0.7.0",  features = ["esp32s3"] }

[features]
# Provides a basic `#[alloc_error_handler]` which simply panics when an
# allocation fails. If this feature is NOT enabled, which it is not by
# default, then a handler needs to be defined in any binary depending on
# this package.
oom-handler = []
