[package]
name    = "esp-alloc"
version = "0.3.0"
authors = [
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
    "Jesse Braham <jesse@beta7.io>",
]
edition      = "2021"
rust-version = "1.68"
description  = "A heap allocator for Espressif devices"
repository   = "https://github.com/esp-rs/esp-alloc"
license      = "MIT OR Apache-2.0"

keywords = [
    "allocator",
    "esp32",
    "riscv",
    "xtensa",
]
categories = [
    "memory-management",
    "no-std",
]

[features]
nightly = []

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"

[dependencies]
critical-section      = "1.1.1"
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs"] }
